Remove unnecessary commons-io